--- a/components/inspectit-ocelot-configurationserver-ui/build.gradle
+++ b/components/inspectit-ocelot-configurationserver-ui/build.gradle
@@ -7,17 +7,17 @@ plugins {
 apply plugin: 'idea'
 
 node {
-    // Version of node to use.
+    // Version of node to use
     version = '20.15.1'
 
-    // Version of npm to use.
+    // Version of npm to use
     npmVersion = '10.8.2'
 
-    // Version of Yarn to use.
+    // Version of Yarn to use
     yarnVersion = '1.22.22'
 
-    // If true, it will download node using above parameters.
-    // If false, it will try to use globally installed node.
+    // If true, it will download node using above parameters
+    // If false, it will try to use globally installed node
     download = true
 
     // Set the work directory for unpacking node
@@ -37,19 +37,23 @@ dependencyCheck {
     analyzers {
         nodeAudit {
             yarnEnabled = true
-            yarnPath = "${buildDir}/yarn/yarn-v${node.yarnVersion.get()}/${OperatingSystem.current() == OperatingSystem.WINDOWS?"yarn.cmd":"bin/yarn"}"
+
+            def yarnSubPath = OperatingSystem.current() == OperatingSystem.WINDOWS
+                    ? "yarn.cmd"
+                    : "bin/yarn"
+            yarnPath = layout.buildDirectory.file("yarn/yarn-v${node.yarnVersion.get()}/$yarnSubPath").get().asFile.absolutePath
             println("Using yarnPath: ${yarnPath}")
         }
     }
 }
 
 /**
- * Task for installing the frontend dependencies.
+ * Task for installing the frontend dependencies
  */
 def installFrontend = tasks.register('installFrontend', YarnTask) {
     args = ['install']
     doLast {
-        var dir = new File("${buildDir}/yarn")
+        var dir = layout.buildDirectory.dir("yarn").get().asFile
         dir.eachDir {d ->
             println("Installed yarn version: ${d}")
         }
@@ -82,10 +86,6 @@ tasks.register('outdated', YarnTask) {
     args = ['outdated']
 
 }
-
-//tasks.register('npmCheckUpdates', NpxTask) {
-//    command = 'npm-check-updates'
-//}
 
 tasks.register('upgradeInteractive', YarnTask) {
     args = ['upgradeInteractive']
