hotfix: fix workflow

--- a/.github/workflows/push_docker_manually.yml
+++ b/.github/workflows/push_docker_manually.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build artifacts
-        run: ./gradlew assemble bootJarWithFrontend -PbuildVersion=$LATEST_TAG
+        run: ./gradlew assemble bootJarWithFrontend -PbuildVersion=2.7.0
         # copy jars into Docker folders
       - name: Prepare Docker artifacts
         run: ./gradlew :inspectit-ocelot-agent:copyAgentJar :inspectit-ocelot-configurationserver:copyServerJar
