--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
         ext.buildVersion = 'SNAPSHOT'
     }
 
-    version = "$buildVersion"
+    version = "2.7.0"//"$buildVersion"
 
     // Normally we use the dependency-check GitHub action to check dependencies
     // We keep this configuration, if you want to run the dependency-check locally
